--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "csv-writer": "^1.6.0",
+    "json2csv": "^6.0.0-alpha.2",
     "readline-sync": "^1.4.10"
   }
 }
