--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "login": "LINK_USERNAME=maksimfedyanindevelop@gmail.com LINK_PASSWORD=48Ab0015749 WITH_PROXY=false npx playwright test -g \"login\" --ui",
-    "send_comment": "LINK_USERNAME=maksimfedyanindevelop@gmail.com LINK_PASSWORD=48Ab0015749 LINK_URL=https://www.linkedin.com/posts/maksim-fedyanin-4a64302a7_test-activity-7271628933895278592-U_j2 WITH_PROXY=false COMMENT=\"test comment uevhouewhbvow\" npx playwright test -g \"send_comment\""
+    "start": "node api/index.ts"
   },
   "keywords": [],
   "author": "",
