--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "uniqlo-playwrite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "node api/index.ts"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "playwright": "^1.50.1",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "dotenv": "^16.4.1"
   }
 }
